--- a/tribute.css
+++ b/tribute.css
@@ -11,7 +11,9 @@ header h1{
     color: white;
     padding: 15px 10px;
     font-size: 32px;
-    
+    width: 500px;
+    margin: auto;
+    border: 2px solid black;
 }
 
 th, td{
