--- a/tribute.css
+++ b/tribute.css
@@ -7,12 +7,18 @@
 
 html{
     background-color: white;
+    font-size: 16px;
 }
 
 body{
     margin: 0px 15%;
     border: 2px solid white;
     background-color: lightgrey;
+    
+}
+
+hr{
+    margin: 10px;
 }
 
 header h1{
@@ -26,6 +32,10 @@ header h1{
     border: 2px solid black;
 }
 
+table{
+    margin: 20px;
+}
+
 th, td{
     border: 3px solid black;
 }
@@ -34,10 +44,16 @@ th{
     background-color: gray;
     color: white;
     padding: 10px 5px;
+    font-size: 22px;
+}
+
+td{
+    padding: 10px 5px;
+    text-align: center;
 }
 
 footer{
-    position:fixed;
+    position:relative;
    left: 0;
    bottom: 0;
    height:30px;
