--- a/tribute.css
+++ b/tribute.css
@@ -73,6 +73,14 @@ td{
     text-align: center;
 }
 
+p{
+   text-align: justify;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-size: larger;
+   margin: 0px 15px;
+   color: black;
+}
+
 footer{
     position:relative;
    left: 0;
